--- a/resume.html
+++ b/resume.html
@@ -59,10 +59,10 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="https://github.com/ezio-7" class="github"><i class="bi bi-github"></i></a>
-        <a href="https://www.linkedin.com/in/ayush-anand-917ab2220/" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-        <a href="https://www.instagram.com/anand_ayush7?igsh=MTZweHVldzRrcGt4Ng==" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.facebook.com/profile.php?id=100057019632783" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://github.com/ezio-7" class="github" target="_blank"><i class="bi bi-github"></i></a>
+        <a href="https://www.linkedin.com/in/ayush-anand-917ab2220/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.instagram.com/anand_ayush7?igsh=MTZweHVldzRrcGt4Ng==" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100057019632783" class="facebook" target="_blank"><i class="bi bi-facebook"></i></a>
       </div>
 
     </div>
@@ -82,7 +82,7 @@
             <!-- My journey began with a love for gaming that led me to game development using engines like Unity and Unreal. 
             Along the way, I picked up web development skills, creating dynamic website designs with HTML, CSS, JavaScript. 
             I'm all about turning ideas into interactive games and captivating websites! -->
-            <a href = "https://drive.google.com/file/d/1wAa--DFw5O7xsSbIHxAICUFUKPqCyDR3/view?usp=sharing">Link to the Résumé</a>
+            <a href = "https://drive.google.com/file/d/1wAa--DFw5O7xsSbIHxAICUFUKPqCyDR3/view?usp=sharing" target="_blank">Link to the Résumé</a>
           </p>
         </div>
 
