--- a/portfolio.html
+++ b/portfolio.html
@@ -61,10 +61,10 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="https://github.com/ezio-7" class="github"><i class="bi bi-github"></i></a>
-        <a href="https://www.linkedin.com/in/ayush-anand-917ab2220/" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-        <a href="https://www.instagram.com/anand_ayush7?igsh=MTZweHVldzRrcGt4Ng==" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.facebook.com/profile.php?id=100057019632783" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://github.com/ezio-7" class="github" target="_blank"><i class="bi bi-github"></i></a>
+        <a href="https://www.linkedin.com/in/ayush-anand-917ab2220/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.instagram.com/anand_ayush7?igsh=MTZweHVldzRrcGt4Ng==" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100057019632783" class="facebook" target="_blank"><i class="bi bi-facebook"></i></a>
       </div>
 
     </div>
@@ -107,9 +107,9 @@
                 <div class="portfolio-links">
                   <!-- <a href="assets/img/portfolio/taipei.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Taipei 101 VR Simulator"><i class="bx bx-plus"></i></a> -->
                   <a href="https://github.com/ezio-7/yelp-camp" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bi bi-github"></i></a>
+                    target="_blank" title="Portfolio Details"><i class="bi bi-github"></i></a>
                   <a href="https://yelp-camp-9ojh.onrender.com" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bi bi-link"></i></a>
+                    target="_blank" title="Portfolio Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -123,9 +123,9 @@
                 <p>Self Project</p>
                 <div class="portfolio-links">
                   <a href="https://github.com/ezio-7/twitter-clone" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bi bi-github"></i></a>
+                    target="_blank" title="Portfolio Details"><i class="bi bi-github"></i></a>
                   <a href="https://share-space-ihpyoj9sg-kshanu12.vercel.app/" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bi bi-link"></i></a>
+                    target="_blank" title="Portfolio Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -139,7 +139,7 @@
                 <p>Self Project</p>
                 <div class="portfolio-links">
                   <a href="https://github.com/ezio-7/betting-site" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bi bi-github"></i></a>
+                    target="_blank" title="Portfolio Details"><i class="bi bi-github"></i></a>
                 </div>
               </div>
             </div>
@@ -153,7 +153,7 @@
                 <p>Software Intern, Resurgent PMC</p>
                 <div class="portfolio-links">
                   <a href="https://github.com/ezio-7/proctor-app" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bi bi-github"></i></a>
+                    target="_blank" title="Portfolio Details"><i class="bi bi-github"></i></a>
                 </div>
               </div>
             </div>
@@ -167,7 +167,7 @@
                 <p>Software Intern, Vayuvoy Pvt Ltd</p>
                 <div class="portfolio-links">
                   <a href="https://github.com/ezio-7/queing-service" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bi bi-github"></i></a>
+                    target="_blank" title="Portfolio Details"><i class="bi bi-github"></i></a>
                 </div>
               </div>
             </div>
@@ -181,7 +181,7 @@
                 <p>Self Project</p>
                 <div class="portfolio-links">
                   <a href="https://github.com/ezio-7/User-Location-Chrome-Extension" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bi bi-github"></i></a>
+                    target="_blank" title="Portfolio Details"><i class="bi bi-github"></i></a>
                 </div>
               </div>
             </div>
@@ -195,9 +195,9 @@
                 <p>Self project</p>
                 <div class="portfolio-links">
                   <a href="https://github.com/ezio-7/dribbling-block" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bi bi-github"></i></a>
+                    target="_blank" title="Portfolio Details"><i class="bi bi-github"></i></a>
                   <a href="https://ezio-7.github.io/dribbling-block/" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bi bi-link"></i></a>
+                    target="_blank" title="Portfolio Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -211,7 +211,7 @@
                 <p>Self Project</p>
                 <div class="portfolio-links">
                   <a href="https://github.com/ezio-7/code-guardian" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bi bi-github"></i></a>
+                    target="_blank" title="Portfolio Details"><i class="bi bi-github"></i></a>
                 </div>
               </div>
             </div>
