--- a/contact.html
+++ b/contact.html
@@ -59,10 +59,10 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="https://github.com/ezio-7" class="github"><i class="bi bi-github"></i></a>
-        <a href="https://www.linkedin.com/in/ayush-anand-917ab2220/" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-        <a href="https://www.instagram.com/anand_ayush7?igsh=MTZweHVldzRrcGt4Ng==" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.facebook.com/profile.php?id=100057019632783" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://github.com/ezio-7" class="github" target="_blank"><i class="bi bi-github"></i></a>
+        <a href="https://www.linkedin.com/in/ayush-anand-917ab2220/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.instagram.com/anand_ayush7?igsh=MTZweHVldzRrcGt4Ng==" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100057019632783" class="facebook" target="_blank"><i class="bi bi-facebook"></i></a>
       </div>
 
     </div>
