--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Ranchi, Jharkhand, India</p>
+                <p style="color:#34b7a7;">Ranchi, Jharkhand, India</p>
               </div>
 
               <div class="email">
