--- a/resume.html
+++ b/resume.html
@@ -82,7 +82,7 @@
             <!-- My journey began with a love for gaming that led me to game development using engines like Unity and Unreal. 
             Along the way, I picked up web development skills, creating dynamic website designs with HTML, CSS, JavaScript. 
             I'm all about turning ideas into interactive games and captivating websites! -->
-            <a href = "https://drive.google.com/file/d/1wAa--DFw5O7xsSbIHxAICUFUKPqCyDR3/view?usp=sharing" target="_blank">Link to the Résumé</a>
+            <a href = "https://drive.google.com/file/d/1G4OX3CRwhieFkrzJwsjpUC7It-eqOnCV/view?usp=drive_link" target="_blank">Link to the Résumé</a>
           </p>
         </div>
 
