--- a/resume.html
+++ b/resume.html
@@ -133,6 +133,30 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+                <h4>Senior Data Analyst</h4>
+                <h5>Jul 2024 - Present</h5>
+                <p><em>EY Global Delivery Services</em></p>
+                <p>
+                <ul>
+                  <li>Part of a team responsible for developing and validating predictive models using machine learning algorithms to address client-specific challenges.</li>
+                  <li>Part of a team responsible for collaborating with cross-functional teams to deliver data-driven solutions across various industries and sectors.</li>
+                </ul>
+                </p>
+              </div>
+              <div class="resume-item">
+                <h4>Software Development Intern</h4>
+                <h5>May 2024 - Jul 2024</h5>
+                <p><em>Noise</em></p>
+                <p>
+                <ul>
+                  <li>Successfully transitioned the existing codebase and database from a monolithic architecture to a microservices architecture, enhancing scalability and maintainability.</li>
+                  <li>Redesigned the codebase and database to support a multi-tenant architecture, enabling more efficient resource utilization and better client management.</li>
+                  <li>Solely designed and developed the Sleep 2.0 API and its functions, calculations and database migration from scratch</li>
+                  <li>Resolved numerous bugs, optimized calculations, and closed multiple tickets, ensuring smoother functionality and better performance and acuuracy across various applications.</li>
+                </ul>
+                </p>
+              </div>
+            <div class="resume-item">
               <h4>Software Development Intern</h4>
               <h5>May 2023 - Jul 2023</h5>
               <p><em>Vayuvoy Pvt Ltd.</em></p>
