--- a/resume.html
+++ b/resume.html
@@ -82,7 +82,7 @@
             <!-- My journey began with a love for gaming that led me to game development using engines like Unity and Unreal. 
             Along the way, I picked up web development skills, creating dynamic website designs with HTML, CSS, JavaScript. 
             I'm all about turning ideas into interactive games and captivating websites! -->
-            <a href = "https://drive.google.com/file/d/1G4OX3CRwhieFkrzJwsjpUC7It-eqOnCV/view?usp=drive_link" target="_blank">Link to the Résumé</a>
+            <a href = https://drive.google.com/file/d/1kBZLmpLHSXugYiMxGGZpZFJN93rKKMai/view?usp=sharing" target="_blank">Link to the Résumé</a>
           </p>
         </div>
 
@@ -138,8 +138,10 @@
                 <p><em>EY Global Delivery Services</em></p>
                 <p>
                 <ul>
-                  <li>Part of a team responsible for developing and validating predictive models using machine learning algorithms to address client-specific challenges.</li>
-                  <li>Part of a team responsible for collaborating with cross-functional teams to deliver data-driven solutions across various industries and sectors.</li>
+                  <li>Developed the whole backend of OPM Model from scratch in python using FastAPI, MySQL and SQLAlchemy.</li>
+                  <li>Implemented the working of backend of document summarization web application in python using Flask and MySQL.</li>
+                  <li>Developed the backend of Tax Cover Letter in python using FastAPI and MongoDB for EY Germany.</li>
+                  <li> Implemented discount prediction and customer segregation using python for a project for EY Germany.</li>
                 </ul>
                 </p>
               </div>
